Fix spacing issues for company pages

--- a/app/assets/stylesheets/company.css.scss
+++ b/app/assets/stylesheets/company.css.scss
@@ -15,6 +15,7 @@
   margin: 0;
   position: relative;
   width: 100vw;
+  padding-bottom: 40px;
 }
 
 
